@@ -91,8 +91,10 @@ Applications</a></b></font></td></tr></table></center>
 Versions newer than this may have problems, so use at your own risk!<br>
 
 <P>
-Please report bugs to 
-<a href="mailto:damon@ximian.com">damon@ximian.com</a></p>
+Please report bugs on
+<a href="http://bugzilla.gnome.org">bugzilla.gnome.org</a>, with the product
+set to 'Glade'.
+</P>
 </font>
 <br>
 <table cellspacing="0" cellpadding="5" border="0">
@@ -108,7 +110,7 @@ Please report bugs to
 <td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 <ul>
-<li><a href="ftp://ftp.gnome.org/pub/GNOME/sources/glade/0.6/glade-0.6.4.tar.gz">Glade 0.6.4 Tarball</a> (2.6 MB)<BR><BR>
+<li><a href="ftp://ftp.gnome.org/pub/GNOME/sources/glade/0.6/glade-0.6.4.tar.gz">Glade 0.6.4 Tarball</a> (2.6 MB)<BR>
 <p>
 Note: You will need <a href="links.html#automake">automake 1.4</a>
 and <a href="links.html#autoconf">autoconf 2.13</a> to build generated code.
@@ -116,7 +118,13 @@ and <a href="links.html#autoconf">autoconf 2.13</a> to build generated code.
 Note: You need a recent version of gnome-libs (>=1.0.50), if you want Gnome
 support.<br>
 Or use './configure --disable-gnome' to build Glade without Gnome support.
-</li></ul></b></font>
+</li>
+
+<li><a href="ftp://ftp.gnome.org/pub/GNOME/sources/glade/1.1/glade-1.1.3.tar.gz">Glade 1.1.3 Tarball</a> (2.5 MB)<BR>
+<p>
+This is the latest beta release supporting GTK+ 2 and GNOME 2.
+It is fully-working now, and has few known bugs.
+</ul></b></font>
 </td>
 <tr>
 
@@ -177,16 +185,6 @@ Slackware Packages</a></li></ul></b></font>
 <font face="Arial,helvetica,geneva,sans-serif,lucida" size="-1">
 <a href="#anfang">Go Up</a></font></td></tr></table></center>		  	
 </td>
-<td bgcolor="#FFFFFF" align="center">
-<center><hr>
-<a href="http://www.gimp.org">
-<img src="graphics/gimp.gif" width="90" height="36" alt="GIMP Banner" border="0"></a><br>
-<font size="2" face="Arial,helvetica,geneva,sans-serif,lucida">
-Please copy and use what you want from this site.<br></font>
-<a href="mailto:webmaster@hhips.de"><font size="2" face="Arial,helvetica,geneva,sans-serif,lucida">
-webmaster@hhips.de</font></a></center>					
-</td>
-</tr>
 </table>
 </center>
 </font>
