@@ -257,16 +257,6 @@ alt="A GUI example made with glade." border="0"></a>
 <font face="Arial,helvetica,geneva,sans-serif,lucida" size="-1">
 <a href="#anfang">Go Up</a></font></td></tr></table></center>		  	
 </td>
-<td bgcolor="#FFFFFF" align="center">
-<center><hr>
-<a href="http://www.gimp.org">
-<img src="graphics/gimp.gif" width="90" height="36" alt="GIMP Banner" border="0"></a><br>
-<font size="2" face="Arial,helvetica,geneva,sans-serif,lucida">
-Please copy and use what you want from this site.<br></font>
-<a href="mailto:webmaster@hhips.de"><font size="2" face="Arial,helvetica,geneva,sans-serif,lucida">
-webmaster@hhips.de</font></a></center>					
-</td>
-</tr>
 </table>
 </center>
 </font>
