@@ -124,7 +124,7 @@ using Glade.
 (A French translation can be found
 <a href="http://yellowspoon.free.fr">here</a>, on the Linux page.)
 </p>
-<p><a href="mailto:damon@ximian.com">Damon Chaplin</a><br></p>
+<p>Damon Chaplin (damon at kendo.fsnet.co.uk)<br></p>
 </font>
 <div align=right>
 <table width=90% cellspacing="0" cellpadding="0" border="0">
@@ -466,16 +466,6 @@ Roberto A. Foglietta has written an
 <a href="#anfang">Go Up</a></font></td></tr></table></center>
 
 </td>
-<td bgcolor="#FFFFFF" align="center">
-<center><hr>
-<a href="http://www.gimp.org">
-<img src="graphics/gimp.gif" width="90" height="36" alt="GIMP Banner" border="0"></a><br>
-<font size="2" face="Arial,helvetica,geneva,sans-serif,lucida">
-Please copy and use what you want from this site.<br></font>
-<a href="mailto:webmaster@hhips.de"><font size="2" face="Arial,helvetica,geneva,sans-serif,lucida">
-webmaster@hhips.de</font></a></center>					
-</td>
-</tr>
 </table>
 </center>
 </font>
