@@ -97,47 +97,14 @@ Applications</a></b></font></td></tr></table></center>
 </table>					
 <PRE>
 
-Some of the longer-term plans are:
+There won't be much new development on Glade 2 any more.
+As soon as everything works for GTK+ 2 and GNOME 2, only bug fixes
+will be allowed.
 
-  - Support external widgets/components, using gmodule's dynamic loading and
-	GTK+'s support for getting/setting widget Args, and also Gnome's
-	bonobo component model (we already have partial support for Bonobo.)
+A rewrite of Glade (called Glade 3) is underway, and is in the glade3
+module in the GNOME cvs repository.
 
-  - A Corba interface, so Glade can be integrated with IDEs or other apps that
-	want a form builder, e.g. gnome-db, evolution.
-
-  - Improved source code output.
-
-	We could use structs to hold pointers to all widgets instead
-	of the current method of storing pointers by using
-	gtk_object_set_data() and letting the user get them
-	using lookup_widget(). This is too cumbersome.
-
-	We could also place source code for each component in a
-	separate file, including the signal handler functions which
-	users edit. Comments would be used to delimit generated
-	source code, so we can regenerate without affecting user
-	code.
-
-	May also include a simple editor to allow code to be edited
-	within Glade.
-
-  - Rewrite property editor (as an Object), so you can set the properties of
-	multiple widgets at once. Also move all properties onto one scrollable
-	page, and have one other page for signal handlers. Move style and
-	accelerator properties to separate dialogs. For the signal handlers,
-	list all available signals with an entry to set the handler function
-	name and a button to show the handler source code?
-
-  - Support for Styles & rc files.
-
-  - Make it easy to develop database apps. We have some support for GnomeDB,
-    though this needs a lot more work.
-
-  - Support for Undo/Redo.
-
-
-Damon, 24 Sep 2000
+Damon, 24 Nov 2002
 
 </PRE>
 </td>
@@ -149,16 +116,6 @@ Damon, 24 Sep 2000
 <font face="Arial,helvetica,geneva,sans-serif,lucida" size="-1">
 <a href="#anfang">Go Up</a></font></td></tr></table></center>		  	
 </td>
-<td bgcolor="#FFFFFF" align="center">
-<center><hr>
-<a href="http://www.gimp.org">
-<img src="graphics/gimp.gif" width="90" height="36" alt="GIMP Banner" border="0"></a><br>
-<font size="2" face="Arial,helvetica,geneva,sans-serif,lucida">
-Please copy and use what you want from this site.<br></font>
-<a href="mailto:webmaster@hhips.de"><font size="2" face="Arial,helvetica,geneva,sans-serif,lucida">
-webmaster@hhips.de</font></a></center>					
-</td>
-</tr>
 </table>
 </center>
 </font>
