@@ -1,3 +1,10 @@
+2002-11-24  Damon Chaplin  <damon@kendo.fsnet.co.uk>
+
+	* apps.html: added glocate2.
+
+	* *.html: updated my email address, and removed old webmaster
+	address.
+
 2002-10-28  Damon Chaplin  <damon@ximian.com>
 
 	* index.html: added Yasunari Imado's Japanese translated tutorial.
